--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,14 +1,26 @@
 .card {
-    background-color: var(--color-light-700);
-    width: max-content;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+}
+
+.card-header {
+    border-radius: 2rem 2rem 0 0;
+    padding: 2rem;
+    text-align: center;
+}
+
+.card-header img {
+    width: 80%;
+}
+
+.card-container {
+    width: 200px;
     padding: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1rem;
-    border-radius: 2rem;
-}
-
-.card img {
-    width: 80%;
+    border-radius: 0 0 2rem 2rem;
+    background-color: var(--color-light-700);
 }
